--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,18 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #0055a4;
 }
+button{
+    background-color: #0077cc;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0055a4;
+}
 
 header {
     display: flex;
